# bevy-talk-2026-04-23

./: .gitignore  Cargo.toml  README.md  present.sh  talk.typ
.cargo/: config.toml
